src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PRIVATE
    PROTECTED
    PUBLIC
    REINTERPRET_CAST
    STATIC_CAST
    TEMPLATE
    THIS
    THROW
    TRY
    TYPEID
    TYPENAME
    USING

Grammar

Rule 0     S' -> start
Rule 1     start -> part
Rule 2     start -> empty
Rule 3     part -> part declorcom
Rule 4     part -> declorcom
Rule 5     declorcom -> comment
Rule 6     declorcom -> external_declaration
Rule 7     initializer -> assignable_expression
Rule 8     initializer -> { initializer_list_orempty }
Rule 9     initializer -> { initializer_list , }
Rule 10    initializer_list -> initializer
Rule 11    initializer_list -> initializer_list , initializer
Rule 12    variable_initable -> variable
Rule 13    variable_initable -> variable = initializer
Rule 14    variable_initable_list -> variable_initable
Rule 15    variable_initable_list -> variable_initable_list , variable_initable
Rule 16    empty -> <empty>
Rule 17    type -> type_specifier_can_unsigned
Rule 18    type -> type_specifier_cannot_unsigned
Rule 19    type -> uorus
Rule 20    type -> uorus type_specifier_can_unsigned
Rule 21    type_specifier -> type_specifier_cannot_unsigned
Rule 22    type_specifier -> type_specifier_can_unsigned
Rule 23    type_specifier -> uorus
Rule 24    type_specifier_cannot_unsigned -> VOID
Rule 25    type_specifier_cannot_unsigned -> FLOAT
Rule 26    type_specifier_cannot_unsigned -> DOUBLE
Rule 27    type_specifier_cannot_unsigned -> BOOL
Rule 28    type_specifier_cannot_unsigned -> struct_specifier
Rule 29    type_specifier_can_unsigned -> INT
Rule 30    type_specifier_can_unsigned -> SHORT
Rule 31    type_specifier_can_unsigned -> LONG
Rule 32    type_specifier_can_unsigned -> CHAR
Rule 33    uorus -> SIGNED
Rule 34    uorus -> UNSIGNED
Rule 35    declaration_list_orempty -> empty
Rule 36    declaration_list_orempty -> declaration_list
Rule 37    declaration -> type variable_initable_list_orempty ;
Rule 38    declaration_list -> declaration
Rule 39    declaration_list -> declaration_list declaration
Rule 40    identifier_list_orempty -> empty
Rule 41    identifier_list_orempty -> identifier_list
Rule 42    identifier_list -> identifier
Rule 43    identifier_list -> identifier_list , identifier
Rule 44    identifier -> ID
Rule 45    identifier -> inlinefunc
Rule 46    inlinefunc -> SIZEOF
Rule 47    back_statement -> BREAK ;
Rule 48    back_statement -> CONTINUE ;
Rule 49    back_statement -> RETURN ;
Rule 50    back_statement -> RETURN expression ;
Rule 51    variable_initable_list_orempty -> empty
Rule 52    variable_initable_list_orempty -> variable_initable_list
Rule 53    assignable_expression_orempty -> empty
Rule 54    assignable_expression_orempty -> assignable_expression
Rule 55    assign_operator -> =
Rule 56    assign_operator -> MUL_ASG
Rule 57    assign_operator -> DIV_ASG
Rule 58    assign_operator -> MOD_ASG
Rule 59    assign_operator -> ADD_ASG
Rule 60    assign_operator -> SUB_ASG
Rule 61    assign_operator -> LEFT_ASG
Rule 62    assign_operator -> RIGHT_ASG
Rule 63    assign_operator -> AND_ASG
Rule 64    assign_operator -> XOR_ASG
Rule 65    assign_operator -> OR_ASG
Rule 66    arg_value_exp_list -> assignable_expression
Rule 67    arg_value_exp_list -> arg_value_exp_list , assignable_expression
Rule 68    assignable_expression -> conditional_expression
Rule 69    assignable_expression -> unary_expression assign_operator assignable_expression
Rule 70    block_item_list_orempty -> empty
Rule 71    block_item_list_orempty -> block_item_list
Rule 72    constant_expression_orempty -> empty
Rule 73    constant_expression_orempty -> constant_expression
Rule 74    specifier_qualifier_list_orempty -> empty
Rule 75    specifier_qualifier_list_orempty -> specifier_qualifier_list
Rule 76    block_item -> declaration
Rule 77    block_item -> statement
Rule 78    block_item -> comment
Rule 79    block_item_list -> block_item
Rule 80    block_item_list -> block_item_list block_item
Rule 81    expression_orempty -> empty
Rule 82    expression_orempty -> expression
Rule 83    funcbody_statement -> { block_item_list_orempty }
Rule 84    conditional_expression -> binary_expression
Rule 85    conditional_expression -> ternary_expression
Rule 86    ternary_expression -> expression ? expression : expression
Rule 87    constant -> INTEGER_CONST
Rule 88    constant -> CHAR_CONST
Rule 89    constant -> FLOAT_CONST
Rule 90    constant -> BOOL_CONST
Rule 91    constant_expression -> conditional_expression
Rule 92    variable -> direct_variable
Rule 93    variable -> pointer direct_variable
Rule 94    specifier_qualifier_list -> type specifier_qualifier_list_orempty
Rule 95    direct_variable -> identifier
Rule 96    direct_variable -> direct_variable [ assignable_expression_orempty ]
Rule 97    direct_variable -> direct_variable ( parameter_list )
Rule 98    direct_variable -> direct_variable ( identifier_list_orempty )
Rule 99    external_declaration -> function_definition
Rule 100   external_declaration -> declaration
Rule 101   expression -> assignable_expression
Rule 102   expression -> expression , assignable_expression
Rule 103   expression_statement -> expression_orempty ;
Rule 104   function_definition -> type variable declaration_list_orempty funcbody_statement
Rule 105   parameter_list -> parameter_declaration
Rule 106   parameter_list -> parameter_list , parameter_declaration
Rule 107   parameter_declaration -> type variable
Rule 108   uscd_expression -> unit_expression
Rule 109   uscd_expression -> uscd_expression [ expression ]
Rule 110   uscd_expression -> uscd_expression ( arg_value_exp_list )
Rule 111   uscd_expression -> uscd_expression ( )
Rule 112   uscd_expression -> uscd_expression PTR_OP identifier
Rule 113   unit_expression -> identifier
Rule 114   unit_expression -> constant
Rule 115   unit_expression -> multiple_string
Rule 116   unit_expression -> ( expression )
Rule 117   branch_statement -> IF ( expression ) statement
Rule 118   branch_statement -> IF ( expression ) statement ELSE statement
Rule 119   loop_statement -> WHILE ( expression ) statement
Rule 120   loop_statement -> FOR ( parameter_declaration ; expression_orempty ; expression_orempty ) statement
Rule 121   loop_statement -> FOR ( expression ; expression_orempty ; expression_orempty ) statement
Rule 122   loop_statement -> FOR ( empty ; expression_orempty ; expression_orempty ) statement
Rule 123   loop_statement -> FOR ( parameter_declaration = expression ; expression_orempty ; expression_orempty ) statement
Rule 124   statement -> funcbody_statement
Rule 125   statement -> branch_statement
Rule 126   statement -> expression_statement
Rule 127   statement -> loop_statement
Rule 128   statement -> back_statement
Rule 129   struct_specifier -> STRUCT identifier
Rule 130   struct_specifier -> STRUCT { struct_declaration_list }
Rule 131   initializer_list_orempty -> empty
Rule 132   initializer_list_orempty -> initializer_list
Rule 133   struct_specifier -> STRUCT identifier { struct_declaration_list }
Rule 134   struct_declaration_list -> struct_declaration
Rule 135   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 136   struct_declaration -> type struct_variable_list ;
Rule 137   struct_variable_list -> variable
Rule 138   struct_variable_list -> struct_variable_list , variable
Rule 139   pointer -> *
Rule 140   pointer -> * pointer
Rule 141   unary_operator -> &
Rule 142   unary_operator -> *
Rule 143   unary_operator -> +
Rule 144   unary_operator -> -
Rule 145   unary_operator -> ~
Rule 146   unary_operator -> !
Rule 147   self_incdec -> INC_OP
Rule 148   self_incdec -> DEC_OP
Rule 149   unary_expression -> uscd_expression
Rule 150   unary_expression -> unary_operator cast_expression
Rule 151   unary_expression -> self_incdec cast_expression
Rule 152   unary_expression -> cast_expression self_incdec
Rule 153   multiple_string -> STRING_CONST
Rule 154   multiple_string -> multiple_string STRING_CONST
Rule 155   binary_expression -> cast_expression
Rule 156   binary_expression -> binary_expression * binary_expression
Rule 157   binary_expression -> binary_expression / binary_expression
Rule 158   binary_expression -> binary_expression % binary_expression
Rule 159   binary_expression -> binary_expression + binary_expression
Rule 160   binary_expression -> binary_expression - binary_expression
Rule 161   binary_expression -> binary_expression RIGHT_OP binary_expression
Rule 162   binary_expression -> binary_expression LEFT_OP binary_expression
Rule 163   binary_expression -> binary_expression < binary_expression
Rule 164   binary_expression -> binary_expression LTE binary_expression
Rule 165   binary_expression -> binary_expression GTE binary_expression
Rule 166   binary_expression -> binary_expression > binary_expression
Rule 167   binary_expression -> binary_expression EQ_OP binary_expression
Rule 168   binary_expression -> binary_expression NEQ_OP binary_expression
Rule 169   binary_expression -> binary_expression & binary_expression
Rule 170   binary_expression -> binary_expression | binary_expression
Rule 171   binary_expression -> binary_expression ^ binary_expression
Rule 172   binary_expression -> binary_expression AND_OP binary_expression
Rule 173   binary_expression -> binary_expression OR_OP binary_expression
Rule 174   cast_expression -> unary_expression
Rule 175   comment -> COMMENT1
Rule 176   comment -> COMMENT2
Rule 177   cpp_advanced -> ASM
Rule 178   cpp_advanced -> BUILT_IN_FUNCTION
Rule 179   cpp_advanced -> CATCH
Rule 180   cpp_advanced -> CLASS
Rule 181   cpp_advanced -> COMMENT2
Rule 182   cpp_advanced -> CONST_CAST
Rule 183   cpp_advanced -> DELETE
Rule 184   cpp_advanced -> DYNAMIC_CAST
Rule 185   cpp_advanced -> EXPLICIT
Rule 186   cpp_advanced -> EXPORT
Rule 187   cpp_advanced -> FRIEND
Rule 188   cpp_advanced -> MUTABLE
Rule 189   cpp_advanced -> NAMESPACE
Rule 190   cpp_advanced -> NEW
Rule 191   cpp_advanced -> OPERATOR
Rule 192   cpp_advanced -> VIRTUAL
Rule 193   cpp_advanced -> AUTO
Rule 194   cpp_advanced -> CONST
Rule 195   cpp_advanced -> DO
Rule 196   cpp_advanced -> ENUM
Rule 197   cpp_advanced -> EXTERN
Rule 198   cpp_advanced -> FOR
Rule 199   cpp_advanced -> STATIC
Rule 200   cpp_advanced -> UNION
Rule 201   cpp_advanced -> VOLATILE
Rule 202   cpp_advanced -> RESTRICT
Rule 203   cpp_advanced -> REGISTER
Rule 204   cpp_advanced -> INLINE
Rule 205   cpp_advanced -> GOTO
Rule 206   cpp_advanced -> TYPEDEF
Rule 207   cpp_advanced -> SWITCH
Rule 208   cpp_advanced -> CASE
Rule 209   cpp_advanced -> INC_OP
Rule 210   cpp_advanced -> DEC_OP
Rule 211   cpp_advanced -> DEFAULT

Terminals, with rules where they appear

!                    : 146
%                    : 158
&                    : 141 169
(                    : 97 98 110 111 116 117 118 119 120 121 122 123
)                    : 97 98 110 111 116 117 118 119 120 121 122 123
*                    : 139 140 142 156
+                    : 143 159
,                    : 9 11 15 43 67 102 106 138
-                    : 144 160
/                    : 157
:                    : 86
;                    : 37 47 48 49 50 103 120 120 121 121 122 122 123 123 136
<                    : 163
=                    : 13 55 123
>                    : 166
?                    : 86
ADD_ASG              : 59
AND_ASG              : 63
AND_OP               : 172
ASM                  : 177
AUTO                 : 193
BOOL                 : 27
BOOL_CONST           : 90
BREAK                : 47
BUILT_IN_FUNCTION    : 178
CASE                 : 208
CATCH                : 179
CHAR                 : 32
CHAR_CONST           : 88
CLASS                : 180
COMMENT1             : 175
COMMENT2             : 176 181
CONST                : 194
CONST_CAST           : 182
CONTINUE             : 48
DEC_OP               : 148 210
DEFAULT              : 211
DELETE               : 183
DIV_ASG              : 57
DO                   : 195
DOUBLE               : 26
DYNAMIC_CAST         : 184
ELSE                 : 118
ENUM                 : 196
EQ_OP                : 167
EXPLICIT             : 185
EXPORT               : 186
EXTERN               : 197
FLOAT                : 25
FLOAT_CONST          : 89
FOR                  : 120 121 122 123 198
FRIEND               : 187
GOTO                 : 205
GTE                  : 165
ID                   : 44
IF                   : 117 118
INC_OP               : 147 209
INLINE               : 204
INT                  : 29
INTEGER_CONST        : 87
LEFT_ASG             : 61
LEFT_OP              : 162
LONG                 : 31
LTE                  : 164
MOD_ASG              : 58
MUL_ASG              : 56
MUTABLE              : 188
NAMESPACE            : 189
NEQ_OP               : 168
NEW                  : 190
OPERATOR             : 191
OR_ASG               : 65
OR_OP                : 173
PRIVATE              : 
PROTECTED            : 
PTR_OP               : 112
PUBLIC               : 
REGISTER             : 203
REINTERPRET_CAST     : 
RESTRICT             : 202
RETURN               : 49 50
RIGHT_ASG            : 62
RIGHT_OP             : 161
SHORT                : 30
SIGNED               : 33
SIZEOF               : 46
STATIC               : 199
STATIC_CAST          : 
STRING_CONST         : 153 154
STRUCT               : 129 130 133
SUB_ASG              : 60
SWITCH               : 207
TEMPLATE             : 
THIS                 : 
THROW                : 
TRY                  : 
TYPEDEF              : 206
TYPEID               : 
TYPENAME             : 
UNION                : 200
UNSIGNED             : 34
USING                : 
VIRTUAL              : 192
VOID                 : 24
VOLATILE             : 201
WHILE                : 119
XOR_ASG              : 64
[                    : 96 109
]                    : 96 109
^                    : 171
error                : 
{                    : 8 9 83 130 133
|                    : 170
}                    : 8 9 83 130 133
~                    : 145

Nonterminals, with rules where they appear

arg_value_exp_list   : 67 110
assign_operator      : 69
assignable_expression : 7 54 66 67 69 101 102
assignable_expression_orempty : 96
back_statement       : 128
binary_expression    : 84 156 156 157 157 158 158 159 159 160 160 161 161 162 162 163 163 164 164 165 165 166 166 167 167 168 168 169 169 170 170 171 171 172 172 173 173
block_item           : 79 80
block_item_list      : 71 80
block_item_list_orempty : 83
branch_statement     : 125
cast_expression      : 150 151 152 155
comment              : 5 78
conditional_expression : 68 91
constant             : 114
constant_expression  : 73
constant_expression_orempty : 
cpp_advanced         : 
declaration          : 38 39 76 100
declaration_list     : 36 39
declaration_list_orempty : 104
declorcom            : 3 4
direct_variable      : 92 93 96 97 98
empty                : 2 35 40 51 53 70 72 74 81 122 131
expression           : 50 82 86 86 86 102 109 116 117 118 119 121 123
expression_orempty   : 103 120 120 121 121 122 122 123 123
expression_statement : 126
external_declaration : 6
funcbody_statement   : 104 124
function_definition  : 99
identifier           : 42 43 95 112 113 129 133
identifier_list      : 41 43
identifier_list_orempty : 98
initializer          : 10 11 13
initializer_list     : 9 11 132
initializer_list_orempty : 8
inlinefunc           : 45
loop_statement       : 127
multiple_string      : 115 154
parameter_declaration : 105 106 120 123
parameter_list       : 97 106
part                 : 1 3
pointer              : 93 140
self_incdec          : 151 152
specifier_qualifier_list : 75
specifier_qualifier_list_orempty : 94
start                : 0
statement            : 77 117 118 118 119 120 121 122 123
struct_declaration   : 134 135
struct_declaration_list : 130 133 135
struct_specifier     : 28
struct_variable_list : 136 138
ternary_expression   : 85
type                 : 37 94 104 107 136
type_specifier       : 
type_specifier_can_unsigned : 17 20 22
type_specifier_cannot_unsigned : 18 21
unary_expression     : 69 174
unary_operator       : 150
unit_expression      : 108
uorus                : 19 20 23
uscd_expression      : 109 110 111 112 149
variable             : 12 13 104 107 137 138
variable_initable    : 14 15
variable_initable_list : 15 52
variable_initable_list_orempty : 37

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . part
    (2) start -> . empty
    (3) part -> . part declorcom
    (4) part -> . declorcom
    (16) empty -> .
    (5) declorcom -> . comment
    (6) declorcom -> . external_declaration
    (175) comment -> . COMMENT1
    (176) comment -> . COMMENT2
    (99) external_declaration -> . function_definition
    (100) external_declaration -> . declaration
    (104) function_definition -> . type variable declaration_list_orempty funcbody_statement
    (37) declaration -> . type variable_initable_list_orempty ;
    (17) type -> . type_specifier_can_unsigned
    (18) type -> . type_specifier_cannot_unsigned
    (19) type -> . uorus
    (20) type -> . uorus type_specifier_can_unsigned
    (29) type_specifier_can_unsigned -> . INT
    (30) type_specifier_can_unsigned -> . SHORT
    (31) type_specifier_can_unsigned -> . LONG
    (32) type_specifier_can_unsigned -> . CHAR
    (24) type_specifier_cannot_unsigned -> . VOID
    (25) type_specifier_cannot_unsigned -> . FLOAT
    (26) type_specifier_cannot_unsigned -> . DOUBLE
    (27) type_specifier_cannot_unsigned -> . BOOL
    (28) type_specifier_cannot_unsigned -> . struct_specifier
    (33) uorus -> . SIGNED
    (34) uorus -> . UNSIGNED
    (129) struct_specifier -> . STRUCT identifier
    (130) struct_specifier -> . STRUCT { struct_declaration_list }
    (133) struct_specifier -> . STRUCT identifier { struct_declaration_list }

    $end            reduce using rule 16 (empty -> .)
    COMMENT1        shift and go to state 7
    COMMENT2        shift and go to state 8
    INT             shift and go to state 15
    SHORT           shift and go to state 16
    LONG            shift and go to state 17
    CHAR            shift and go to state 18
    VOID            shift and go to state 19
    FLOAT           shift and go to state 20
    DOUBLE          shift and go to state 21
    BOOL            shift and go to state 22
    SIGNED          shift and go to state 24
    UNSIGNED        shift and go to state 25
    STRUCT          shift and go to state 26

    start                          shift and go to state 1
    part                           shift and go to state 2
    empty                          shift and go to state 3
    declorcom                      shift and go to state 4
    comment                        shift and go to state 5
    external_declaration           shift and go to state 6
    function_definition            shift and go to state 9
    declaration                    shift and go to state 10
    type                           shift and go to state 11
    type_specifier_can_unsigned    shift and go to state 12
    type_specifier_cannot_unsigned shift and go to state 13
    uorus                          shift and go to state 14
    struct_specifier               shift and go to state 23

state 1

    (0) S' -> start .



state 2

    (1) start -> part .
    (3) part -> part . declorcom
    (5) declorcom -> . comment
    (6) declorcom -> . external_declaration
    (175) comment -> . COMMENT1
    (176) comment -> . COMMENT2
    (99) external_declaration -> . function_definition
    (100) external_declaration -> . declaration
    (104) function_definition -> . type variable declaration_list_orempty funcbody_statement
    (37) declaration -> . type variable_initable_list_orempty ;
    (17) type -> . type_specifier_can_unsigned
    (18) type -> . type_specifier_cannot_unsigned
    (19) type -> . uorus
    (20) type -> . uorus type_specifier_can_unsigned
    (29) type_specifier_can_unsigned -> . INT
    (30) type_specifier_can_unsigned -> . SHORT
    (31) type_specifier_can_unsigned -> . LONG
    (32) type_specifier_can_unsigned -> . CHAR
    (24) type_specifier_cannot_unsigned -> . VOID
    (25) type_specifier_cannot_unsigned -> . FLOAT
    (26) type_specifier_cannot_unsigned -> . DOUBLE
    (27) type_specifier_cannot_unsigned -> . BOOL
    (28) type_specifier_cannot_unsigned -> . struct_specifier
    (33) uorus -> . SIGNED
    (34) uorus -> . UNSIGNED
    (129) struct_specifier -> . STRUCT identifier
    (130) struct_specifier -> . STRUCT { struct_declaration_list }
    (133) struct_specifier -> . STRUCT identifier { struct_declaration_list }

    $end            reduce using rule 1 (start -> part .)
    COMMENT1        shift and go to state 7
    COMMENT2        shift and go to state 8
    INT             shift and go to state 15
    SHORT           shift and go to state 16
    LONG            shift and go to state 17
    CHAR            shift and go to state 18
    VOID            shift and go to state 19
    FLOAT           shift and go to state 20
    DOUBLE          shift and go to state 21
    BOOL            shift and go to state 22
    SIGNED          shift and go to state 24
    UNSIGNED        shift and go to state 25
    STRUCT          shift and go to state 26

    declorcom                      shift and go to state 27
    comment                        shift and go to state 5
    external_declaration           shift and go to state 6
    function_definition            shift and go to state 9
    declaration                    shift and go to state 10
    type                           shift and go to state 11
    type_specifier_can_unsigned    shift and go to state 12
    type_specifier_cannot_unsigned shift and go to state 13
    uorus                          shift and go to state 14
    struct_specifier               shift and go to state 23

state 3

    (2) start -> empty .

    $end            reduce using rule 2 (start -> empty .)


state 4

    (4) part -> declorcom .

    COMMENT1        reduce using rule 4 (part -> declorcom .)
    COMMENT2        reduce using rule 4 (part -> declorcom .)
    INT             reduce using rule 4 (part -> declorcom .)
    SHORT           reduce using rule 4 (part -> declorcom .)
    LONG            reduce using rule 4 (part -> declorcom .)
    CHAR            reduce using rule 4 (part -> declorcom .)
    VOID            reduce using rule 4 (part -> declorcom .)
    FLOAT           reduce using rule 4 (part -> declorcom .)
    DOUBLE          reduce using rule 4 (part -> declorcom .)
    BOOL            reduce using rule 4 (part -> declorcom .)
    SIGNED          reduce using rule 4 (part -> declorcom .)
    UNSIGNED        reduce using rule 4 (part -> declorcom .)
    STRUCT          reduce using rule 4 (part -> declorcom .)
    $end            reduce using rule 4 (part -> declorcom .)


state 5

    (5) declorcom -> comment .

    COMMENT1        reduce using rule 5 (declorcom -> comment .)
    COMMENT2        reduce using rule 5 (declorcom -> comment .)
    INT             reduce using rule 5 (declorcom -> comment .)
    SHORT           reduce using rule 5 (declorcom -> comment .)
    LONG            reduce using rule 5 (declorcom -> comment .)
    CHAR            reduce using rule 5 (declorcom -> comment .)
    VOID            reduce using rule 5 (declorcom -> comment .)
    FLOAT           reduce using rule 5 (declorcom -> comment .)
    DOUBLE          reduce using rule 5 (declorcom -> comment .)
    BOOL            reduce using rule 5 (declorcom -> comment .)
    SIGNED          reduce using rule 5 (declorcom -> comment .)
    UNSIGNED        reduce using rule 5 (declorcom -> comment .)
    STRUCT          reduce using rule 5 (declorcom -> comment .)
    $end            reduce using rule 5 (declorcom -> comment .)


state 6

    (6) declorcom -> external_declaration .

    COMMENT1        reduce using rule 6 (declorcom -> external_declaration .)
    COMMENT2        reduce using rule 6 (declorcom -> external_declaration .)
    INT             reduce using rule 6 (declorcom -> external_declaration .)
    SHORT           reduce using rule 6 (declorcom -> external_declaration .)
    LONG            reduce using rule 6 (declorcom -> external_declaration .)
    CHAR            reduce using rule 6 (declorcom -> external_declaration .)
    VOID            reduce using rule 6 (declorcom -> external_declaration .)
    FLOAT           reduce using rule 6 (declorcom -> external_declaration .)
    DOUBLE          reduce using rule 6 (declorcom -> external_declaration .)
    BOOL            reduce using rule 6 (declorcom -> external_declaration .)
    SIGNED          reduce using rule 6 (declorcom -> external_declaration .)
    UNSIGNED        reduce using rule 6 (declorcom -> external_declaration .)
    STRUCT          reduce using rule 6 (declorcom -> external_declaration .)
    $end            reduce using rule 6 (declorcom -> external_declaration .)


state 7

    (175) comment -> COMMENT1 .

    COMMENT1        reduce using rule 175 (comment -> COMMENT1 .)
    COMMENT2        reduce using rule 175 (comment -> COMMENT1 .)
    INT             reduce using rule 175 (comment -> COMMENT1 .)
    SHORT           reduce using rule 175 (comment -> COMMENT1 .)
    LONG            reduce using rule 175 (comment -> COMMENT1 .)
    CHAR            reduce using rule 175 (comment -> COMMENT1 .)
    VOID            reduce using rule 175 (comment -> COMMENT1 .)
    FLOAT           reduce using rule 175 (comment -> COMMENT1 .)
    DOUBLE          reduce using rule 175 (comment -> COMMENT1 .)
    BOOL            reduce using rule 175 (comment -> COMMENT1 .)
    SIGNED          reduce using rule 175 (comment -> COMMENT1 .)
    UNSIGNED        reduce using rule 175 (comment -> COMMENT1 .)
    STRUCT          reduce using rule 175 (comment -> COMMENT1 .)
    $end            reduce using rule 175 (comment -> COMMENT1 .)
    {               reduce using rule 175 (comment -> COMMENT1 .)
    IF              reduce using rule 175 (comment -> COMMENT1 .)
    WHILE           reduce using rule 175 (comment -> COMMENT1 .)
    FOR             reduce using rule 175 (comment -> COMMENT1 .)
    BREAK           reduce using rule 175 (comment -> COMMENT1 .)
    CONTINUE        reduce using rule 175 (comment -> COMMENT1 .)
    RETURN          reduce using rule 175 (comment -> COMMENT1 .)
    &               reduce using rule 175 (comment -> COMMENT1 .)
    *               reduce using rule 175 (comment -> COMMENT1 .)
    +               reduce using rule 175 (comment -> COMMENT1 .)
    -               reduce using rule 175 (comment -> COMMENT1 .)
    ~               reduce using rule 175 (comment -> COMMENT1 .)
    !               reduce using rule 175 (comment -> COMMENT1 .)
    INC_OP          reduce using rule 175 (comment -> COMMENT1 .)
    DEC_OP          reduce using rule 175 (comment -> COMMENT1 .)
    (               reduce using rule 175 (comment -> COMMENT1 .)
    ID              reduce using rule 175 (comment -> COMMENT1 .)
    INTEGER_CONST   reduce using rule 175 (comment -> COMMENT1 .)
    CHAR_CONST      reduce using rule 175 (comment -> COMMENT1 .)
    FLOAT_CONST     reduce using rule 175 (comment -> COMMENT1 .)
    BOOL_CONST      reduce using rule 175 (comment -> COMMENT1 .)
    STRING_CONST    reduce using rule 175 (comment -> COMMENT1 .)
    SIZEOF          reduce using rule 175 (comment -> COMMENT1 .)
    ;               reduce using rule 175 (comment -> COMMENT1 .)
    }               reduce using rule 175 (comment -> COMMENT1 .)


state 8

    (176) comment -> COMMENT2 .

    COMMENT1        reduce using rule 176 (comment -> COMMENT2 .)
    COMMENT2        reduce using rule 176 (comment -> COMMENT2 .)
    INT             reduce using rule 176 (comment -> COMMENT2 .)
    SHORT           reduce using rule 176 (comment -> COMMENT2 .)
    LONG            reduce using rule 176 (comment -> COMMENT2 .)
    CHAR            reduce using rule 176 (comment -> COMMENT2 .)
    VOID            reduce using rule 176 (comment -> COMMENT2 .)
    FLOAT           reduce using rule 176 (comment -> COMMENT2 .)
    DOUBLE          reduce using rule 176 (comment -> COMMENT2 .)
    BOOL            reduce using rule 176 (comment -> COMMENT2 .)
    SIGNED          reduce using rule 176 (comment -> COMMENT2 .)
    UNSIGNED        reduce using rule 176 (comment -> COMMENT2 .)
    STRUCT          reduce using rule 176 (comment -> COMMENT2 .)
    $end            reduce using rule 176 (comment -> COMMENT2 .)
    {               reduce using rule 176 (comment -> COMMENT2 .)
    IF              reduce using rule 176 (comment -> COMMENT2 .)
    WHILE           reduce using rule 176 (comment -> COMMENT2 .)
    FOR             reduce using rule 176 (comment -> COMMENT2 .)
    BREAK           reduce using rule 176 (comment -> COMMENT2 .)
    CONTINUE        reduce using rule 176 (comment -> COMMENT2 .)
    RETURN          reduce using rule 176 (comment -> COMMENT2 .)
    &               reduce using rule 176 (comment -> COMMENT2 .)
    *               reduce using rule 176 (comment -> COMMENT2 .)
    +               reduce using rule 176 (comment -> COMMENT2 .)
    -               reduce using rule 176 (comment -> COMMENT2 .)
    ~               reduce using rule 176 (comment -> COMMENT2 .)
    !               reduce using rule 176 (comment -> COMMENT2 .)
    INC_OP          reduce using rule 176 (comment -> COMMENT2 .)
    DEC_OP          reduce using rule 176 (comment -> COMMENT2 .)
    (               reduce using rule 176 (comment -> COMMENT2 .)
    ID              reduce using rule 176 (comment -> COMMENT2 .)
    INTEGER_CONST   reduce using rule 176 (comment -> COMMENT2 .)
    CHAR_CONST      reduce using rule 176 (comment -> COMMENT2 .)
    FLOAT_CONST     reduce using rule 176 (comment -> COMMENT2 .)
    BOOL_CONST      reduce using rule 176 (comment -> COMMENT2 .)
    STRING_CONST    reduce using rule 176 (comment -> COMMENT2 .)
    SIZEOF          reduce using rule 176 (comment -> COMMENT2 .)
    ;               reduce using rule 176 (comment -> COMMENT2 .)
    }               reduce using rule 176 (comment -> COMMENT2 .)


state 9

    (99) external_declaration -> function_definition .

    COMMENT1        reduce using rule 99 (external_declaration -> function_definition .)
    COMMENT2        reduce using rule 99 (external_declaration -> function_definition .)
    INT             reduce using rule 99 (external_declaration -> function_definition .)
    SHORT           reduce using rule 99 (external_declaration -> function_definition .)
    LONG            reduce using rule 99 (external_declaration -> function_definition .)
    CHAR            reduce using rule 99 (external_declaration -> function_definition .)
    VOID            reduce using rule 99 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 99 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 99 (external_declaration -> function_definition .)
    BOOL            reduce using rule 99 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 99 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 99 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 99 (external_declaration -> function_definition .)
    $end            reduce using rule 99 (external_declaration -> function_definition .)


state 10

    (100) external_declaration -> declaration .

    COMMENT1        reduce using rule 100 (external_declaration -> declaration .)
    COMMENT2        reduce using rule 100 (external_declaration -> declaration .)
    INT             reduce using rule 100 (external_declaration -> declaration .)
    SHORT           reduce using rule 100 (external_declaration -> declaration .)
    LONG            reduce using rule 100 (external_declaration -> declaration .)
    CHAR            reduce using rule 100 (external_declaration -> declaration .)
    VOID            reduce using rule 100 (external_declaration -> declaration .)
    FLOAT           reduce using rule 100 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 100 (external_declaration -> declaration .)
    BOOL            reduce using rule 100 (external_declaration -> declaration .)
    SIGNED          reduce using rule 100 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 100 (external_declaration -> declaration .)
    STRUCT          reduce using rule 100 (external_declaration -> declaration .)
    $end            reduce using rule 100 (external_declaration -> declaration .)


state 11

    (104) function_definition -> type . variable declaration_list_orempty funcbody_statement
    (37) declaration -> type . variable_initable_list_orempty ;
    (92) variable -> . direct_variable
    (93) variable -> . pointer direct_variable
    (51) variable_initable_list_orempty -> . empty
    (52) variable_initable_list_orempty -> . variable_initable_list
    (95) direct_variable -> . identifier
    (96) direct_variable -> . direct_variable [ assignable_expression_orempty ]
    (97) direct_variable -> . direct_variable ( parameter_list )
    (98) direct_variable -> . direct_variable ( identifier_list_orempty )
    (139) pointer -> . *
    (140) pointer -> . * pointer
    (16) empty -> .
    (14) variable_initable_list -> . variable_initable
    (15) variable_initable_list -> . variable_initable_list , variable_initable
    (44) identifier -> . ID
    (45) identifier -> . inlinefunc
    (12) variable_initable -> . variable
    (13) variable_initable -> . variable = initializer
    (46) inlinefunc -> . SIZEOF

    *               shift and go to state 35
    ;               reduce using rule 16 (empty -> .)
    ID              shift and go to state 37
    SIZEOF          shift and go to state 39

    variable                       shift and go to state 28
    variable_initable_list_orempty shift and go to state 29
    direct_variable                shift and go to state 30
    pointer                        shift and go to state 31
    empty                          shift and go to state 32
    variable_initable_list         shift and go to state 33
    identifier                     shift and go to state 34
    variable_initable              shift and go to state 36
    inlinefunc                     shift and go to state 38

state 12

    (17) type -> type_specifier_can_unsigned .

    *               reduce using rule 17 (type -> type_specifier_can_unsigned .)
    ID              reduce using rule 17 (type -> type_specifier_can_unsigned .)
    SIZEOF          reduce using rule 17 (type -> type_specifier_can_unsigned .)
    ;               reduce using rule 17 (type -> type_specifier_can_unsigned .)


state 13

    (18) type -> type_specifier_cannot_unsigned .

    *               reduce using rule 18 (type -> type_specifier_cannot_unsigned .)
    ID              reduce using rule 18 (type -> type_specifier_cannot_unsigned .)
    SIZEOF          reduce using rule 18 (type -> type_specifier_cannot_unsigned .)
    ;               reduce using rule 18 (type -> type_specifier_cannot_unsigned .)


state 14
